# AnyMessenger

./: .gitignore  CMakeLists.txt
AnyMessenger/: CMakeLists.txt  Messenger.hpp  Reciver.hpp
TestAnyMessenger/: CMakeLists.txt  Messages.hpp  Reciver1.hpp  Reciver2.hpp  Reciver3.hpp  TestAnyMessenger.cpp
